crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.useCallback-set-ref-nested-property-dont-preserve-memoization/error.txt
Found 1 error:

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.useCallback-set-ref-nested-property-dont-preserve-memoization.ts:13:2
  11 |   });
  12 |
> 13 |   ref.current.inner = null;
     |   ^^^^^^^^^^^ Cannot update ref during render
  14 |
  15 |   return <input onChange={onChange} />;
  16 | }
